--- a/Movie Review/css/aboutus.css
+++ b/Movie Review/css/aboutus.css
@@ -1,8 +1,15 @@
 /* Style for the page content */
 .container {
 	max-width: 800px;
-	margin: 0 auto;
+	margin: 20px auto;
 	padding: 20px;
+	border: 2px solid #588157;
+	border-radius: 5px;
+	background-color: #a3b18a;
+}
+
+html {
+  overflow-y: scroll;
 }
 
 /* Style for the header */
@@ -11,6 +18,7 @@ header {
 	color: white;
 	padding: 10px;
 	text-align: center;
+  font-family: cursive;
 }
 
 body{
@@ -35,5 +43,26 @@ nav a {
 
 /* Style for the active navigation bar link */
 nav a.active {
-	background-color: #a3b18a;
+	background-color: #31572c;
+}
+
+/* Style for scrollbar width */
+::-webkit-scrollbar {
+	width: 8px;
+}
+
+/* Style for the color of the track of scrollbar */
+::-webkit-scrollbar-track {
+	background: #a3b18a;
+}
+ 
+/* Style for the handle */
+::-webkit-scrollbar-thumb {
+	background: #888;
+	border-radius: 30px;
+}
+
+/* Style for color for the hover on the handle */
+::-webkit-scrollbar-thumb:hover {
+	background: #666;
 }
