--- a/Movie Review/css/home.css
+++ b/Movie Review/css/home.css
@@ -4,10 +4,10 @@ header {
 	color: white;
 	padding: 10px;
 	text-align: center;
-	
+    font-family: cursive;
 }
 
-body{
+body {
 	background-color: #a3b18a;
 }
 
@@ -29,10 +29,10 @@ nav a {
 
 /* Style for the active navigation bar link */
 nav a.active {
-	background-color: #a3b18a;
+	background-color: #31572c;
 }
 
-/* Style for change the main area where the sections are to look nice */
+/* Style to change the main area where the sections are to look nice */
 main {
 	margin: 20px;
 	text-align: center;
@@ -118,21 +118,59 @@ tbody tr:last-child td {
 }
 #gif1{
 	border-style: none;
-	margin-left:-10%;
 	margin-bottom: 5%;
 }
 
-ul{
-    list-style-type: katakana;
+.upcoming, .watch {
+	height: 200px;
+}
+
+.watch ul{
+    list-style-type: katakana; /* make the bullets katakana */
     color: black;
     font-style: italic;
     font-family: cursive;
     font-weight: 700;
 }
 
+ul a:link, ul a:visited {
+    color: black;
+    font-style: italic;
+    font-family: cursive;
+    font-weight: 700;
+   	text-decoration: none;
+}
 
-ul a{
-	color:#4361ee;
+ul a:hover {
+	color:#8f57ae;
 	text-decoration: none;
 }
 
+.upcoming ul {
+	list-style-type: katakana-iroha; /* make the bullets katakana-iroha */
+    color: black;
+    font-style: italic;
+    font-family: cursive;
+    font-weight: 700;
+}
+
+/* Style for scrollbar width */
+::-webkit-scrollbar {
+	width: 8px;
+}
+
+/* Style for the color of the track of scrollbar */
+::-webkit-scrollbar-track {
+	background: #a3b18a;
+}
+ 
+/* Style for the handle */
+::-webkit-scrollbar-thumb {
+	background: #888;
+	border-radius: 30px;
+}
+
+/* Style for color for the hover on the handle */
+::-webkit-scrollbar-thumb:hover {
+	background: #666;
+}
